--- a/baidu_ife/2-26/sass/partitials/_variables.scss
+++ b/baidu_ife/2-26/sass/partitials/_variables.scss
@@ -7,9 +7,10 @@ $color6: #3b3f58;
 $color7: #08687e;
 $color8: #d1e8d6;
 $color9: #3e4059;
+$color10: #2fa06c;
 
 $svg: 800px;
-$basic: 300px;
+$basic: 250px;
 
 %align-middle {
   position: absolute;
