--- a/baidu_ife/2-26/sass/partitials/_console.scss
+++ b/baidu_ife/2-26/sass/partitials/_console.scss
@@ -1,14 +1,16 @@
 @import "variables";
 @import "compass";
 .console {
-  position: absolute;
+  flex: 3;
+  margin: 0 20px;
+  /*position: absolute;
   left: 0;
-  bottom: 0;
+  bottom: 0;*/
   width: 300px;
-  height: 200px;
+  height: 150px;
   padding: 0 10px;
   line-height: 16px;
-  border: 2px dotted $color5;
+  border-left: 2px dotted $color6;
   color: $color5;
   font-size: .75rem;
   & .success {
