--- a/baidu_ife/2-26/sass/partitials/_layout.scss
+++ b/baidu_ife/2-26/sass/partitials/_layout.scss
@@ -11,13 +11,13 @@ html, body {
   width: 100%;
   height: 100%;
   background-color: $color1;
-  overflow: hidden;
+  min-width: 1280px;
 }
 
 .planet {
   @extend %align-middle;
-  width: 300px;
-  height: 300px;
+  width: 250px;
+  height: 250px;
   background-color: $color2;
   border-radius: 50%;
 }
@@ -29,33 +29,63 @@ html, body {
     border-radius: 50%;
     background-color: $color3;
     position: relative;
-    top: $i * 50px;
-    left: $i * 50px + 10px;
+    top: $i * 40px;
+    left: $i * 40px + 10px;
   }
 }
 
 #layout {
-  @extend %align-middle;
+  position: relative;
+  margin: 0 auto;
   width: 800px;
-  height: 800px;
+  height: 680px;
 }
 
 @for $i from 1 through 4 {
-  #orbite#{$i} {
+  .orbite#{$i} {
     @extend %align-middle;
     width: $basic + $i * 100px;
     height: $basic + $i * 100px;
-    border: 2px solid $color9;
-    border-radius: 50%;
+    & .orbite-#{$i} {
+      width: 100%;
+      height: 100%;
+      border: 2px solid $color9;
+      border-radius: 50%;
+    }
   }
   .craft-model-#{$i} {
     @extend %align-middle;
     display: none;
-    width: 20px;
+    width: 360px + ($i - 1) * 100px;
     height: 40px;
-    border-radius: 10px;
-    background-color: $color4;
-    left: $basic + $i * 100px - 10px;
+    & .craft-inner {
+      float: right;
+      position: relative;
+      width: 20px;
+      height: 40px;
+      border-radius: 10px;
+      background-color: $color4;
+      text-align: center;
+      overflow: hidden;
+      & span {
+        display: block;
+        position: relative;
+        line-height: 40px;
+        font-size: 1rem;
+        z-index: 9;
+        color: $color1;
+        transform: rotate(-90deg);
+      }
+      & .energy {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        bottom: 0;
+        background-color: $color10;
+        z-index: 0;
+      }
+    }
+    /*left: $basic + $i * 100px - 10px;*/
   }
 }
 
@@ -74,8 +104,7 @@ html, body {
     transform: rotate(360deg);
   }
 }
-/*.rotating {
+.rotating {
   animation: rotating 10s linear infinite;
-}*/
-
+}
 
