--- a/baidu_ife/2-26/css/main.css
+++ b/baidu_ife/2-26/css/main.css
@@ -1,4 +1,4 @@
-/* line 15, ../sass/partitials/_variables.scss */
+/* line 24, ../sass/partitials/_variables.scss */
 .planet, .orbite1, .craft-model-1, .orbite2, .craft-model-2, .orbite3, .craft-model-3, .orbite4, .craft-model-4 {
   position: absolute;
   top: 0;
@@ -29,9 +29,10 @@ html, body {
   height: 250px;
   background-color: #ec5d4a;
   border-radius: 50%;
+  overflow: hidden;
 }
 
-/* line 26, ../sass/partitials/_layout.scss */
+/* line 27, ../sass/partitials/_layout.scss */
 .hole-1 {
   width: 20px;
   height: 20px;
@@ -42,7 +43,7 @@ html, body {
   left: 50px;
 }
 
-/* line 26, ../sass/partitials/_layout.scss */
+/* line 27, ../sass/partitials/_layout.scss */
 .hole-2 {
   width: 40px;
   height: 40px;
@@ -53,7 +54,7 @@ html, body {
   left: 90px;
 }
 
-/* line 26, ../sass/partitials/_layout.scss */
+/* line 27, ../sass/partitials/_layout.scss */
 .hole-3 {
   width: 60px;
   height: 60px;
@@ -64,7 +65,7 @@ html, body {
   left: 130px;
 }
 
-/* line 37, ../sass/partitials/_layout.scss */
+/* line 38, ../sass/partitials/_layout.scss */
 #layout {
   position: relative;
   margin: 0 auto;
@@ -72,12 +73,12 @@ html, body {
   height: 680px;
 }
 
-/* line 45, ../sass/partitials/_layout.scss */
+/* line 46, ../sass/partitials/_layout.scss */
 .orbite1 {
   width: 350px;
   height: 350px;
 }
-/* line 49, ../sass/partitials/_layout.scss */
+/* line 50, ../sass/partitials/_layout.scss */
 .orbite1 .orbite-1 {
   width: 100%;
   height: 100%;
@@ -85,14 +86,14 @@ html, body {
   border-radius: 50%;
 }
 
-/* line 56, ../sass/partitials/_layout.scss */
+/* line 57, ../sass/partitials/_layout.scss */
 .craft-model-1 {
   display: none;
   width: 360px;
   height: 40px;
   /*left: $basic + $i * 100px - 10px;*/
 }
-/* line 61, ../sass/partitials/_layout.scss */
+/* line 62, ../sass/partitials/_layout.scss */
 .craft-model-1 .craft-inner {
   float: right;
   position: relative;
@@ -103,7 +104,7 @@ html, body {
   text-align: center;
   overflow: hidden;
 }
-/* line 70, ../sass/partitials/_layout.scss */
+/* line 71, ../sass/partitials/_layout.scss */
 .craft-model-1 .craft-inner span {
   display: block;
   position: relative;
@@ -113,7 +114,7 @@ html, body {
   color: #02071d;
   transform: rotate(-90deg);
 }
-/* line 79, ../sass/partitials/_layout.scss */
+/* line 80, ../sass/partitials/_layout.scss */
 .craft-model-1 .craft-inner .energy {
   position: absolute;
   width: 100%;
@@ -123,12 +124,12 @@ html, body {
   z-index: 0;
 }
 
-/* line 45, ../sass/partitials/_layout.scss */
+/* line 46, ../sass/partitials/_layout.scss */
 .orbite2 {
   width: 450px;
   height: 450px;
 }
-/* line 49, ../sass/partitials/_layout.scss */
+/* line 50, ../sass/partitials/_layout.scss */
 .orbite2 .orbite-2 {
   width: 100%;
   height: 100%;
@@ -136,14 +137,14 @@ html, body {
   border-radius: 50%;
 }
 
-/* line 56, ../sass/partitials/_layout.scss */
+/* line 57, ../sass/partitials/_layout.scss */
 .craft-model-2 {
   display: none;
   width: 460px;
   height: 40px;
   /*left: $basic + $i * 100px - 10px;*/
 }
-/* line 61, ../sass/partitials/_layout.scss */
+/* line 62, ../sass/partitials/_layout.scss */
 .craft-model-2 .craft-inner {
   float: right;
   position: relative;
@@ -154,7 +155,7 @@ html, body {
   text-align: center;
   overflow: hidden;
 }
-/* line 70, ../sass/partitials/_layout.scss */
+/* line 71, ../sass/partitials/_layout.scss */
 .craft-model-2 .craft-inner span {
   display: block;
   position: relative;
@@ -164,7 +165,7 @@ html, body {
   color: #02071d;
   transform: rotate(-90deg);
 }
-/* line 79, ../sass/partitials/_layout.scss */
+/* line 80, ../sass/partitials/_layout.scss */
 .craft-model-2 .craft-inner .energy {
   position: absolute;
   width: 100%;
@@ -174,12 +175,12 @@ html, body {
   z-index: 0;
 }
 
-/* line 45, ../sass/partitials/_layout.scss */
+/* line 46, ../sass/partitials/_layout.scss */
 .orbite3 {
   width: 550px;
   height: 550px;
 }
-/* line 49, ../sass/partitials/_layout.scss */
+/* line 50, ../sass/partitials/_layout.scss */
 .orbite3 .orbite-3 {
   width: 100%;
   height: 100%;
@@ -187,14 +188,14 @@ html, body {
   border-radius: 50%;
 }
 
-/* line 56, ../sass/partitials/_layout.scss */
+/* line 57, ../sass/partitials/_layout.scss */
 .craft-model-3 {
   display: none;
   width: 560px;
   height: 40px;
   /*left: $basic + $i * 100px - 10px;*/
 }
-/* line 61, ../sass/partitials/_layout.scss */
+/* line 62, ../sass/partitials/_layout.scss */
 .craft-model-3 .craft-inner {
   float: right;
   position: relative;
@@ -205,7 +206,7 @@ html, body {
   text-align: center;
   overflow: hidden;
 }
-/* line 70, ../sass/partitials/_layout.scss */
+/* line 71, ../sass/partitials/_layout.scss */
 .craft-model-3 .craft-inner span {
   display: block;
   position: relative;
@@ -215,7 +216,7 @@ html, body {
   color: #02071d;
   transform: rotate(-90deg);
 }
-/* line 79, ../sass/partitials/_layout.scss */
+/* line 80, ../sass/partitials/_layout.scss */
 .craft-model-3 .craft-inner .energy {
   position: absolute;
   width: 100%;
@@ -225,12 +226,12 @@ html, body {
   z-index: 0;
 }
 
-/* line 45, ../sass/partitials/_layout.scss */
+/* line 46, ../sass/partitials/_layout.scss */
 .orbite4 {
   width: 650px;
   height: 650px;
 }
-/* line 49, ../sass/partitials/_layout.scss */
+/* line 50, ../sass/partitials/_layout.scss */
 .orbite4 .orbite-4 {
   width: 100%;
   height: 100%;
@@ -238,14 +239,14 @@ html, body {
   border-radius: 50%;
 }
 
-/* line 56, ../sass/partitials/_layout.scss */
+/* line 57, ../sass/partitials/_layout.scss */
 .craft-model-4 {
   display: none;
   width: 660px;
   height: 40px;
   /*left: $basic + $i * 100px - 10px;*/
 }
-/* line 61, ../sass/partitials/_layout.scss */
+/* line 62, ../sass/partitials/_layout.scss */
 .craft-model-4 .craft-inner {
   float: right;
   position: relative;
@@ -256,7 +257,7 @@ html, body {
   text-align: center;
   overflow: hidden;
 }
-/* line 70, ../sass/partitials/_layout.scss */
+/* line 71, ../sass/partitials/_layout.scss */
 .craft-model-4 .craft-inner span {
   display: block;
   position: relative;
@@ -266,7 +267,7 @@ html, body {
   color: #02071d;
   transform: rotate(-90deg);
 }
-/* line 79, ../sass/partitials/_layout.scss */
+/* line 80, ../sass/partitials/_layout.scss */
 .craft-model-4 .craft-inner .energy {
   position: absolute;
   width: 100%;
@@ -276,12 +277,12 @@ html, body {
   z-index: 0;
 }
 
-/* line 92, ../sass/partitials/_layout.scss */
+/* line 93, ../sass/partitials/_layout.scss */
 .hidden {
   display: none;
 }
 
-/* line 95, ../sass/partitials/_layout.scss */
+/* line 96, ../sass/partitials/_layout.scss */
 .visible {
   display: block;
 }
@@ -294,9 +295,97 @@ html, body {
     transform: rotate(360deg);
   }
 }
-/* line 107, ../sass/partitials/_layout.scss */
+/* line 108, ../sass/partitials/_layout.scss */
 .rotating {
-  animation: rotating 10s linear infinite;
+  animation: rotating 50s linear infinite;
+}
+
+/* line 112, ../sass/partitials/_layout.scss */
+.background {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+/* line 116, ../sass/partitials/_layout.scss */
+.background [class^=planet] {
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+/* line 122, ../sass/partitials/_layout.scss */
+.background .hole-4 {
+  position: absolute;
+  width: 15px;
+  height: 15px;
+  background-color: #cbd1c6;
+  border-radius: 50%;
+  top: 20px;
+  left: 20px;
+}
+/* line 131, ../sass/partitials/_layout.scss */
+.background .hole-5 {
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  background-color: #999b8d;
+  border-radius: 50%;
+  top: 10px;
+  left: -5px;
+}
+/* line 140, ../sass/partitials/_layout.scss */
+.background .planet-1 {
+  top: 450px;
+  left: 300px;
+  background-color: #d9e6cd;
+  overflow: hidden;
+}
+/* line 146, ../sass/partitials/_layout.scss */
+.background .planet-2 {
+  width: 30px;
+  height: 30px;
+  top: 150px;
+  right: 350px;
+  background-color: #11a4c6;
+  overflow: hidden;
+}
+/* line 153, ../sass/partitials/_layout.scss */
+.background .planet-2 .hole-4 {
+  background-color: #1068a8;
+}
+/* line 156, ../sass/partitials/_layout.scss */
+.background .planet-2 .hole-5 {
+  background-color: #84bde7;
+}
+/* line 160, ../sass/partitials/_layout.scss */
+.background .planet-3 {
+  top: 450px;
+  right: 300px;
+  background-color: #f5a83e;
+  overflow: hidden;
+}
+/* line 165, ../sass/partitials/_layout.scss */
+.background .planet-3 .hole-4 {
+  background-color: #e0862e;
+}
+/* line 168, ../sass/partitials/_layout.scss */
+.background .planet-3 .hole-5 {
+  background-color: #e0862e;
+}
+/* line 173, ../sass/partitials/_layout.scss */
+.background .planet-4 {
+  top: 50px;
+  left: 300px;
+  background-color: #f5a83e;
+  overflow: hidden;
+}
+/* line 178, ../sass/partitials/_layout.scss */
+.background .planet-4 .hole-4 {
+  background-color: #e0862e;
+}
+/* line 181, ../sass/partitials/_layout.scss */
+.background .planet-4 .hole-5 {
+  background-color: #e0862e;
 }
 
 /* line 4, ../sass/partitials/_control.scss */
@@ -395,6 +484,7 @@ html, body {
   /*position: absolute;
   left: 0;
   bottom: 0;*/
+  bottom: 0;
   width: 300px;
   height: 150px;
   padding: 0 10px;
@@ -403,7 +493,7 @@ html, body {
   color: #32a39d;
   font-size: .75rem;
 }
-/* line 16, ../sass/partitials/_console.scss */
+/* line 17, ../sass/partitials/_console.scss */
 .console .success {
   color: #d9e6cd;
 }
