--- a/baidu_ife/2-26/sass/partitials/_layout.scss
+++ b/baidu_ife/2-26/sass/partitials/_layout.scss
@@ -20,6 +20,7 @@ html, body {
   height: 250px;
   background-color: $color2;
   border-radius: 50%;
+  overflow: hidden;
 }
 
 @for $i from 1 through 3 {
@@ -105,6 +106,82 @@ html, body {
   }
 }
 .rotating {
-  animation: rotating 10s linear infinite;
+  animation: rotating 50s linear infinite;
+}
+
+.background {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  & [class ^= planet] {
+    position: absolute;
+    width: $planet-size;
+    height: $planet-size;
+    border-radius: 50%;
+  }
+  & .hole-4 {
+    position: absolute;
+    width: 15px;
+    height: 15px;
+    background-color: $color11;
+    border-radius: 50%;
+    top: 20px;
+    left: 20px;
+  }
+  & .hole-5 {
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    background-color: $color12;
+    border-radius: 50%;
+    top: 10px;
+    left: -5px;
+  }
+  .planet-1 {
+    top: 450px;
+    left: 300px;
+    background-color: $color4;
+    overflow: hidden;
+  }
+  .planet-2 {
+    width: $planet-size - 10px;
+    height: $planet-size - 10px;
+    top: 150px;
+    right: 350px;
+    background-color: $color13;
+    overflow: hidden;
+    & .hole-4 {
+      background-color: $color14;
+    }
+    & .hole-5 {
+      background-color: $color15;
+    }
+  }
+  .planet-3 {
+    top: 450px;
+    right: 300px;
+    background-color: $color16;
+    overflow: hidden;
+    & .hole-4 {
+      background-color: $color17;
+    }
+    & .hole-5 {
+      background-color: $color17;
+    }
+  }
+
+  .planet-4 {
+    top: 50px;
+    left: 300px;
+    background-color: $color16;
+    overflow: hidden;
+    & .hole-4 {
+      background-color: $color17;
+    }
+    & .hole-5 {
+      background-color: $color17;
+    }
+  }
+
 }
 
