--- a/baidu_ife/2-26/sass/partitials/_variables.scss
+++ b/baidu_ife/2-26/sass/partitials/_variables.scss
@@ -8,9 +8,18 @@ $color7: #08687e;
 $color8: #d1e8d6;
 $color9: #3e4059;
 $color10: #2fa06c;
+$color11: #cbd1c6;
+$color12: #999b8d;
+$color13: #11a4c6;
+$color14: #1068a8;
+$color15: #84bde7;
+$color16: #f5a83e;
+$color17: #e0862e;
 
 $svg: 800px;
 $basic: 250px;
+
+$planet-size: 40px;
 
 %align-middle {
   position: absolute;
