--- a/baidu_ife/2-26/sass/main.scss
+++ b/baidu_ife/2-26/sass/main.scss
@@ -5,6 +5,10 @@
 @import "partitials/console";
 
 @font-face {
+  font-family: "Microsoft YaHei", yaHei;
+  src: url('../../1-06/css/font/msyh.ttf');
+}
+@font-face {
   font-family: 'Glyphicons Halflings';
 
   src: url('fonts/glyphicons-halflings-regular.eot');
