--- a/baidu_ife/2-26/sass/partitials/_control.scss
+++ b/baidu_ife/2-26/sass/partitials/_control.scss
@@ -42,6 +42,7 @@
       font-size: .75rem;
       border-radius: 50%;
       cursor: pointer;
+      outline: none;
     }
     & [class *= forbid] {
       opacity: .5;
